--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -10,7 +10,7 @@
 }
 
 html {
-    /*background: #6c00f6;*/
+    background: #192231;
     /*background-image: -moz-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: -webkit-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
