--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -10,12 +10,12 @@
 }
 
 html {
-    background: #192231;
+/*     background: #192231; */
     /*background-image: -moz-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: -webkit-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-attachment:fixed;*/
-    background: url('/weather-app-PWA/assets/weather-app.png') no-repeat;
+    background: #192231 url('/weather-app-PWA/assets/weather-app.png') no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
