--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -28,8 +28,8 @@ body {
     color: #ffffff;
     font-size: 1.2em;
     /* Use systems default font */
-    /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Open Sans", "Helvetica Neue", sans-serif;*/
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Open Sans", "Helvetica Neue", sans-serif;
+/*     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-shadow: 1px 1px 1px rgba(0,0,0,.54);
