--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -229,6 +229,9 @@ img.cond-code {
 
 .astro-details .details {
     flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .padding-bottom-border {
@@ -241,5 +244,22 @@ img.cond-code {
 }
 
 img.weather-condition-icon {
-  width: 100px;
+    width: 100px;
+}
+
+.wind-pressure-forecast .wind-icon {
+  display: flex;
+}
+
+.wind-pressure-forecast .wind-icon img {
+  z-index: 0;
+}
+
+img.turbine-small {
+    width: 50px;
+    height: 70px;
+    align-self: center;
+    position: absolute;
+    left: 50px;
+    z-index: 0;
 }
