--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -20,7 +20,7 @@ html {
     background-image: -webkit-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);*/
     /*background-attachment:fixed;*/
-    background: url('assets/weather-app.png') no-repeat;
+    background: url('../../assets/weather-app.png') no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
