--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -15,11 +15,10 @@ a {
 }
 
 html {
-/*     background: #192231; */
-    /*background-image: -moz-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
+    background: #192231;
+    background-image: -moz-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: -webkit-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
-    background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);*/
-    /*background-attachment:fixed;*/
+    background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background: url('../../assets/weather-app.png') no-repeat;
     background-attachment: fixed;
     background-size: cover;
