--- a/web_app/css/style.css
+++ b/web_app/css/style.css
@@ -19,7 +19,7 @@ html {
     background-image: -moz-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: -webkit-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
-    background: url('../../assets/weather-app.png') no-repeat;
+    /*background: url('../../assets/weather-app.png') no-repeat;*/
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
