--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,11 @@ a {
 }
 
 html {
-    /*background: #6c00f6;*/
-    /*background-image: -moz-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
+    background: #192231;
+    background-image: -moz-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
     background-image: -webkit-linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
-    background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);*/
-    /*background-attachment:fixed;*/
-    background: url('/../assets/weather-app.png') no-repeat;
+    background-image: linear-gradient(48deg, #6c00f6 15%, #6c00f6 85%);
+    /*background: url('../../assets/weather-app.png') no-repeat;*/
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -33,8 +32,8 @@ body {
     color: #ffffff;
     font-size: 1.2em;
     /* Use systems default font */
-    /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Open Sans", "Helvetica Neue", sans-serif;*/
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Open Sans", "Helvetica Neue", sans-serif;
+    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, .54);
@@ -47,7 +46,9 @@ header, main, footer {
 
 header {
     position: fixed;
-    height: 66px;
+    height: 74px;
+    background: #6c00f6;
+    z-index: 10;
 }
 
 
@@ -74,6 +75,7 @@ header .menu, header .refresh {
 
 header div.city-info {
     flex-grow: 1;
+    margin-top:12px;
 }
 
 .weather-app {
